--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,13 @@
+:root {
+    --red-light: #f9004d;
+    --grey-light: #fcfc;
+    --grey-dark: #1a242b;
+    --grey: #858585;
+    --dark: #191919;
+    --black: #000;
+    --white: white;
+}
+
 * {
     padding: 0;
     margin: 0;
@@ -23,14 +33,14 @@ nav {
 }
 
 .logo {
-    color: white;
+    color: var(--white);
     font-size: 45px;
     letter-spacing: 1px;
     cursor: point;
 }
 
 span {
-    color: #f9004d;
+    color: var(--red-light);
 }
 
 nav ul li {
@@ -41,7 +51,7 @@ nav ul li {
 }
 
 nav ul li a {
-    color: white;
+    color: var(--white);
     text-decoration: none;
     font-weight: 600;
     text-transform: capitalize;
@@ -49,14 +59,14 @@ nav ul li a {
 }
 
 nav ul li a:hover {
-    color: #f9004d;
+    color: var(--red-light);
     transition: .4s;
     transform: scale(1.2);
 }
 
 .btn {
-    background-color: #f9004d;
-    color: white;
+    background-color: var(--red-light);
+    color: var(--white);
     text-decoration: none;
     border: 2px solid transparent;
     font-weight: 500;
@@ -65,9 +75,9 @@ nav ul li a:hover {
 }
 
 .btn:hover {
-    color: #f9004d;
-    background-color: white;
-    border: 2px solid #f9004d;
+    color: var(--red-light);
+    background-color: var(--white);
+    border: 2px solid var(--red-light);
     transition: transform .5s;
     transform: scale(1.2);
 }
@@ -80,25 +90,25 @@ nav ul li a:hover {
 }
 
 .content h1 {
-    color: white;
+    color: var(--white);
     margin: 20px 0px 20px;
     font-size: 75px;
 }
 
 .content h3 {
-    color: white;
+    color: var(--white);
     font-size: 25px;
     margin-bottom: 50px;
 }
 
 .content h4 {
-    color: #fcfc;
+    color: var(--grey-light);
     letter-spacing: 2px;
     font-size: 20px;
 }
 
 .newslatter form {
-    width: 380px;
+    width: 400px;
     max-width: 100%;
     position: relative;
 }
@@ -107,21 +117,23 @@ nav ul li a:hover {
     display: inline-block;
     width: 100%;
     padding: 16px 130px 16px 15px;
-    border: 2px solid #f9004d;
+    border: 2px solid var(--red-light);
     outline: none;
     border-radius: 90px;
 }
 
 .newslatter form input:last-child {
+    width: 100px;
+    text-align: center;
     position: absolute;
     display: inline-block;
     outline: none;
     border: none;
-    padding: 10px 30px;
+    padding: 10px 10px;
     border-radius: 30px;
-    background-color: #f9004d;
-    color: white;
-    box-shadow: 0 0 5px #000, 0 0 15px #858585;
+    background-color: var(--red-light);
+    color: var(--white);
+    box-shadow: 0 0 5px var(--black), 0 0 15px var(--grey);
     top: 8px;
     right: 10px;
     transition: transform .4s;
@@ -129,10 +141,10 @@ nav ul li a:hover {
 
 .newslatter form input:last-child:hover {
     transform: scale(1.07);
-    color: #f9004d;
-    background-color: white;
-    border: 2px solid #f9004d;
-    padding: 8px 30px;
+    color: var(--red-light);
+    background-color: var(--white);
+    border: 2px solid var(--red-light);
+    padding: 8px 10px;
 }
 
 .main {
@@ -147,7 +159,7 @@ nav ul li a:hover {
 .about {
     width: 100%;
     padding: 100px 0;
-    background-color: #1a242b;
+    background-color: var(--grey-dark);
 }
 
 .about img {
@@ -161,14 +173,14 @@ nav ul li a:hover {
 }
 
 .about-text h2 {
-    color: white;
+    color: var(--white);
     font-size: 75px;
     text-transform: capitalize;
     margin-bottom: 20px;
 }
 
 .about-text h5 {
-    color: white;
+    color: var(--white);
     font-size: 22px;
     text-transform: capitalize;
     margin-bottom: 20px;
@@ -176,7 +188,7 @@ nav ul li a:hover {
 }
 
 .about-text p {
-    color: #fcfc;
+    color: var(--grey-light);
     font-size: 18px;
     margin-bottom: 45px;
     letter-spacing: 1px;
@@ -184,8 +196,8 @@ nav ul li a:hover {
 }
 
 button {
-    background-color: #f9004d;
-    color: white;
+    background-color: var(--red-light);
+    color: var(--white);
     text-decoration: none;
     border: 2px solid transparent;
     font-weight: 500;
@@ -195,20 +207,20 @@ button {
 }
 
 button:hover {
-    color: #f9004d;
-    background-color: white;
-    border: 2px solid #f9004d;
+    color: var(--red-light);
+    background-color: var(--white);
+    border: 2px solid var(--red-light);
     transform: scale(1.2);
 }
 
 .service {
-    background: #191919;
+    background: var(--dark);
     width: 100%;
     padding: 100px 0px;
 }
 
 .title h2 {
-    color: white;
+    color: var(--white);
     font-size: 75px;
     width: 1130px;
     margin: 30px auto;
@@ -225,40 +237,47 @@ button:hover {
 .card {
     height: 400px;
     width: 335px;
-    padding: 20px 35px;
-    background: #1a242b;
+    padding: 10px 15px;
+    background: var(--grey-dark);
     border-radius: 20px;
-    margin: 15px;
+    margin: 55px 15px 15px 15px;
     position: relative;
     overflow: hidden;
     text-align: center;
 }
 
-.card img {
-    height: 50px;
-    height: 50px;
-    margin: 25px 0;
+.card svg {
+    color: var(--red-light);
+    width: 40px;
+    height: 40px;
+    margin: 15px 0;
 }
 
 h5 {
-    color: white;
+    color: var(--white);
     font-size: 23px;
-    margin-bottom: 15px;
+    margin: 10px;
 }
 
+/* .pra {
+    height: 295px;
+} */
+
 .pra p {
-    color: #fcfc;
+    height: 50px;
+    margin-top: 25px;
+    color: var(--grey-light);
     font-size: 16px;
     line-height: 27px;
-    margin-bottom: 25px;
     display: flex;
     justify-content: center;
 }
 
 .card .button {
+    margin-top: 80px;
     height: 50px;
-    background-color: #f9004d;
-    color: white;
+    background-color: var(--red-light);
+    color: var(--white);
     text-decoration: none;
     border: 2px solid transparent;
     font-weight: 500;
@@ -268,16 +287,16 @@ h5 {
 }
 
 .card .button:hover {
-    color: #f9004d;
-    background-color: white;
-    border: 2px solid #f9004d;
+    color: var(--red-light);
+    background-color: var(--white);
+    border: 2px solid var(--red-light);
     transform: scale(1.15);
 }
 
 .contact-me {
     width: 100%;
     height: 290px;
-    background: #1a242b;
+    background: var(--grey-dark);
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -285,15 +304,15 @@ h5 {
 }
 
 .contact-me p {
-    color: white;
+    color: var(--white);
     font-size: 30px;
     font-weight: bold;
     margin-bottom: 25px;
 }
 
 .contact-me .button-two {
-    background-color: #f9004d;
-    color: white;
+    background-color: var(--red-light);
+    color: var(--white);
     text-decoration: none;
     border: 2px solid transparent;
     font-weight: 500;
@@ -303,9 +322,9 @@ h5 {
 }
 
 .contact-me .button-two:hover {
-    color: #f9004d;
-    background-color: white;
-    border: 2px solid #f9004d;
+    color: var(--red-light);
+    background-color: var(--white);
+    border: 2px solid var(--red-light);
     transform: scale(1.2);
 }
 
@@ -313,7 +332,7 @@ footer {
     position: relative;
     width: 100%;
     height: 350px;
-    background: #191919;
+    background: var(--dark);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -322,14 +341,14 @@ footer {
 
 footer p:nth-child(1) {
     font-size: 30px;
-    color: white;
+    color: var(--white);
     margin-bottom: 20px;
     font-weight: bold;
 }
 
 footer p:nth-child(2) {
     font-size: 17px;
-    color: white;
+    color: var(--white);
     width: 500px;
     text-align: center;
     line-height: 26px;
@@ -345,25 +364,25 @@ footer p:nth-child(2) {
     display: flex;
     align-items: center;
     justify-content: center;
-    background: #f9004d;
+    background: var(--red-light);
     border-radius: 50%;
     margin: 22px 15px;
-    color: white;
+    color: var(--white);
     text-decoration: none;
     font-size: 20px;
     transition: .4s;
 }
 
 .social a:hover {
-    color: #f9004d;
-    background-color: white;
-    border: 2px solid #f9004d;
+    color: var(--red-light);
+    background-color: var(--white);
+    border: 2px solid var(--red-light);
     transform: scale(1.2);
 }
 
 .end {
     position: absolute;
-    color: white;
+    color: var(--white);
     bottom: 25px;
     font-size: 15px;
 }
